@startuml

class GradeTrackerGUI {
}

class Grade {
}

class JsonWriter {
}

class JsonReader {
}

class Student {
}

class Course {
}

class EventLog {
}

class Event {
}

GradeTrackerGUI *--> "0..*" Student
GradeTrackerGUI *--> "0..*" Course
GradeTrackerGUI *--> "1" JsonWriter
GradeTrackerGUI *--> "1" JsonReader
GradeTrackerGUI ..> Grade

Student "1" --> "0..*" Course

Course ..> EventLog
Course ..> Event
Course ..> Grade

EventLog "1" --> "0..*" Event

@enduml